# LEMUR

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
include/dml/: call_dmr.hpp  fdr.hpp  metadata.hpp  model.hpp  smoothing.hpp  tsv_stream.hpp  util.hpp
include/impute_methylation/: beta_binomial.hpp  evaluate.hpp  haplotype_target.hpp  tsv_io.hpp
include/merge_bedmethyl/: bedmethyl_columns.hpp  format.hpp  locus.hpp  merger.hpp  options.hpp  reader.hpp  record.hpp
scripts/: run_slurm.sh
src/: call_dmr_main.cpp  dml_main.cpp  evaluate_main.cpp  format.cpp  impute_main.cpp  la_dml_main.cpp  locus.cpp  main.cpp  merger.cpp  options.cpp  reader.cpp  smooth_main.cpp  tracts_main.cpp
src/dml/: call_dmr.cpp  fdr.cpp  metadata.cpp  model.cpp  smoothing.cpp  tsv_stream.cpp  util.cpp
src/impute/: beta_binomial.cpp  evaluate.cpp  haplotype_target.cpp  tsv_io.cpp
tests/: CMakeLists.txt
tests/data/: S1_combined.bedmethyl  S1_hp1.bedmethyl  S1_hp2.bedmethyl  S2_combined.bedmethyl  S2_hp1.bedmethyl  S2_hp2.bedmethyl  dml_call_dmr.csv  dml_cohort.tsv  dml_metadata.csv  tiny.tsv  tiny.tsv.imputed.eval.tsv  tiny.tsv.masked.tsv  tiny_sample.tsv  tiny_sample.tsv.imputed.eval.tsv  tiny_sample.tsv.masked.tsv
tests/expected/: call_dmr.csv  dml_cohort.csv  merge_two_samples.tsv  merge_two_samples_sample_mode.tsv  merge_two_samples_single.tsv  tiny_hap1_imputed.tsv  tiny_hap1_smoothed.tsv  tiny_sample_counts_cov_imputed.tsv  tiny_sample_counts_cov_smoothed.tsv  tiny_sample_imputed.tsv  tiny_sample_smoothed.tsv
